# aif-pymdp-tutorial

./: 02_interactive_gui.html  README.md  pyproject.toml
notebooks/: 01_temp_control_inference_only.ipynb  02_temp_control_action_selection.ipynb
