[project]
name = "aif-tutorial"
version = "0.1.0"
description = "Active Inference tutorial for internal NLR use"
requires-python = ">=3.10"
dependencies = [
    "inferactively-pymdp @ git+https://github.com/infer-actively/pymdp.git",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "jupyter>=1.0",
    "notebook>=7.0",
    "ipykernel>=6.0",
    "ipywidgets>=8.0",
    "seaborn>=0.12",
]

[dependency-groups]
dev = []

[tool.uv]
package = false
